<resources>

    <string name="app_name">MNNIT Academic Portal</string>
    <string name="password">Password</string>
    <string name="registration_number">Registration Number</string>
    <string name="mnnit">MNNIT</string>
    <string name="allahabad">ALLAHABAD</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="click_here"> Click Here.</string>
    <string name="not_a_registered_user">Not a registered user?</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="reset">RESET</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="regNo">Registration Number</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="course_feedback">Course Feedback</string>


    <string-array name="branch_array">
        <item>--Select Branch--</item>
        <item>Computer Science And Engineering</item>
        <item>Information Technology</item>
        <item>Electronics and Communication Engineering</item>
        <item>Electrical Engineering</item>
        <item>Civil Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Production and Industrial</item>
        <item>Chemical Engineering</item>
        <item>Biotechnology</item>
    </string-array>

    <string-array name="feedback_array">
        <item>--Select Course--</item>
        <item>Data Structures</item>
        <item>Foundation of Logical Thought</item>
        <item>Analog and Digital Electronics</item>
        <item>OOPs</item>
        <item>Management of IT industries</item>
    </string-array>

    <string-array name="semester_array">
        <item>--Select Semester--</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
        <item>Eight</item>
    </string-array>

    <string-array name="gender">
        <item>--Select Gender--</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="register">register</string>
    <string name="phone">phone</string>
    <string name="Eml">Email</string>
    <string name="enter_the_feedback">Enter The Feedback</string>
    <string name="send_feedback">Submit</string>
    <string name="em">Email Students</string>
    <string name="enter_email">Enter Email</string>
    <string name="subject">Subject</string>
    <string name="destination_email">Destination Email</string>
    <string name="compose">Compose</string>
    <string name="click_me">CLick Me</string>
    <string name="email">Email</string>
    <string name="send_mail">send</string>
    <string name="select_image">select image</string>
    <string name="upload">upload</string>
    <string name="enter_cuurent_password">Enter Cuurent Password</string>

</resources>
