<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EmailActivity">

    <android.support.v7.widget.SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#a1887f"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/l"
        android:layout_below="@id/searchBar"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination_email"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
            tools:ignore="LabelFor,TextViewEdits" >

        </TextView>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/s"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:theme="@style/editText">

            <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:layout_marginTop="60dp"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:maxLines="1">

        </EditText>

        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/multiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/compose"
            android:inputType="textMultiLine">

        </EditText>
    </LinearLayout>


    <Button
        android:id="@+id/emailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/l"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/click_me">

    </Button>


</RelativeLayout>