<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChangePassword">


    <LinearLayout
        android:id="@+id/above"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="29dp"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="26dp">

        <ImageView
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/mnnit"
            android:src="@drawable/mnnit" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/mnnit"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:gravity="center|bottom"
                android:text="@string/mnnit"
                android:textColor="#859fc9"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:gravity="center|top"
                android:text="@string/allahabad"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/above"
       android:orientation="vertical"
       android:layout_marginTop="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPass"
        android:layout_width="298dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:theme="@style/editText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/getOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/password_visibile_off"
            android:drawableStart="@mipmap/lock"
            android:hint="@string/enter_cuurent_password"
            android:inputType="textPassword"
            android:maxLength="30" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/getPassword"
        android:layout_width="298dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_below="@+id/oldPass"
        android:theme="@style/editText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/setPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/password_visibile_off"
            android:drawableStart="@mipmap/lock"
            android:hint="@string/set_password"
            android:inputType="textPassword"
            android:maxLength="30" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassword"
        android:layout_width="298dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_below="@+id/getPassword"
        android:theme="@style/editText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/password_visibile_off"
            android:drawableStart="@mipmap/lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="30" />

    </android.support.design.widget.TextInputLayout>

       <Button
           android:id="@+id/button"
           android:layout_width="wrap_content"
           android:layout_height="36dp"
           android:layout_gravity="center"
           android:layout_marginBottom="24dp"
           android:layout_marginTop="16dp"
           android:background="@drawable/rectangle_corners"
           android:elevation="6dp"
           android:foregroundTint="#b69d9e"
           android:text="@string/register" />

   </LinearLayout>
</RelativeLayout>